Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove Term::Clui on MSWin32 only

2.05      2018-06-25 17:00:53 -0400
  - Updated my dists to latest
  - Add Term::Clui

2.04      2018-06-19 17:03:56 -0600
  - Updated my dists to latest
  - Add FFI::TinyCC::Inline
  - Add Test2::Tools::HTTP
  - Add Test2::Tools::HTTP::UA::Mojo

2.03      2018-05-21 09:46:22 -0400
  - Updated my dists to latest
  - add App::Prove::Plugin::TermTable
  - add Test2::Tools::JSON::Pointer

2.02      2018-05-08 07:11:52 -0400
  - Updated my dists to latest

2.01      2018-03-24 19:30:48 -0400
  - updated my dists to latest
  - remove PlugAuth::Plugin::Finger (deprecated)
  - remove PlugAuth::Plugin::DBIAuth (deprecated)
  - remove PlugAuth::Plugin::AuthenSimple (deprecated)
  - remove Test::Clustericious::Blocking (deprecated)
  - remove Test::Clustericious::Cluster (deprecated)
  - remove PlugAuth (deprecated)
  - remove PlugAuth::Plugin::LDAP (deprecated)
  - remove PlugAuth::Client::Tiny::Apache2AuthenHandler
  - remove PlugAuth::Client::Tiny::Apache2AuthzHandler
  - remove Clustericious (deprecated)
  - remove Clustericious::Admin (deprecated)
  - remove Clustericious::Coder::BSON
  - remove Authen::Simple::PlugAuth (deprecated)
  - remove PlugAuth::Client::Tiny (deprecated)
  - remove Yars (deprecated)
  - remove Dist::Zilla::Plugin::Meta::Dynamic::Config
  - remove Dist::Zilla::Plugin::PPPort
  - remove Log::Log4perl
  - remove Mojolicious
  - remove Pod::Perldoc
  - remove URI
  - remove URI::Encode
  - remove Validate::Tiny

2.00      2017-09-07 11:51:57 -0400
  - add Alien::Build::Plugin::Probe::Override
  - Updated my dists to latest

1.99      2017-08-29 01:11:17 -0400
  - remove Alien::Libarchive::Installer
  - remove Alien::bz2::Installer
  - remove Alien::Libarchive
  - remove Dist::Zilla::Plugin::Template::Tiny
  - remove Test::Script::Async
  - Updated my dists to latest

1.98      2017-08-22 06:39:09 -0400
  - remove Dist::Zilla::Plugin::jQuery