@@ -27,8 +27,8 @@ Alien::automake                                = 0.14
 Alien::Autotools                               = 1.04
 Alien::Base::ModuleBuild                       = 1.04
 Alien::bison                                   = 0.19
-Alien::Build                                   = 1.46
-Alien::Build::Git                              = 0.06
+Alien::Build                                   = 1.48
+Alien::Build::Git                              = 0.07
 Alien::Build::MB                               = 0.05
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
 Alien::Build::Plugin::Fetch::Cache             = 0.04
@@ -60,10 +60,11 @@ Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.20
 Alien::Nettle                                  = 0.04
 Alien::patch                                   = 0.14
-Alien::pkgconf                                 = 0.12
+Alien::pkgconf                                 = 0.14
 Alien::Role::Alt                               = 0.04
 Alien::Role::Dino                              = 0.06
 Alien::xz                                      = 0.06
+;Alt::Alien::cmake::System
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::libffi                              = 0.04
@@ -71,7 +72,7 @@ AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
-AnyEvent::WebSocket::Client                    = 0.48
+AnyEvent::WebSocket::Client                    = 0.49
 App::af                                        = 0.15
 App::cpangitify                                = 0.17
 App::Prove::Plugin::TermTable                  = 0.02
@@ -89,6 +90,7 @@ Dist::Zilla::Plugin::Alt                       = 0.05
 Dist::Zilla::Plugin::Author::Plicease          = 2.26
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
+Dist::Zilla::Plugin::FFI                       = 0.01
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
@@ -98,21 +100,22 @@ Dist::Zilla::Plugin::TextTabs                  = 0.04
 Dist::Zilla::PluginBundle::Author::Plicease    = 2.26
 Env::ShellWords                                = 0.02
 FFI                                            = 1.12
+FFI::Build                                     = 0.02
 FFI::CheckLib                                  = 0.20
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.50
+FFI::Platypus                                  = 0.51
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.07
 FFI::Platypus::Lang::Pascal                    = 0.05
 FFI::Platypus::Lang::Rust                      = 0.04
-FFI::Platypus::Type::StringArray               = 0.01
+FFI::Platypus::Type::StringArray               = 0.02
 FFI::TinyCC                                    = 0.28
 FFI::TinyCC::Inline                            = 0.28
 FFI::Util                                      = 0.17
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.08
-File::ShareDir::Dist                           = 0.05
+File::ShareDir::Dist                           = 0.06
 File::Which                                    = 1.22
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
@@ -126,7 +129,7 @@ PkgConfig::LibPkgConf                          = 0.09
 Shell::Config::Generate                        = 0.31
 Shell::Guess                                   = 0.08
 String::Template                               = 0.21
-Term::Clui                                     = 1.72
+Term::Clui                                     = 1.73
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 0.99
 Test::CChecker                                 = 0.08
@@ -148,7 +151,7 @@ Win32::Getppid                                 = 0.05
 Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.03
 Win32API::ProcessStatus                        = 0.05
-WWW::Bugzilla::BugTree                         = 0.07
+WWW::Bugzilla::BugTree                         = 0.08
 
 App::Ack                                       = 0
 App::cpanminus                                 = 0
